--- a/Paradox.Console.CustomInterpreter/Paradox.Console.CustomInterpreter.csproj
+++ b/Paradox.Console.CustomInterpreter/Paradox.Console.CustomInterpreter.csproj
@@ -334,7 +334,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command.cs" />
+    <Compile Include="CommandResult.cs" />
+    <Compile Include="CustomCommandInterpreter.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Check.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SiliconStudioPackageProps)" Condition="Exists('$(SiliconStudioPackageProps)')" />
