stup -> public, definitions to partial

--- a/Paradox.Console/Paradox.Console.csproj
+++ b/Paradox.Console/Paradox.Console.csproj
@@ -332,6 +332,9 @@
   <ItemGroup>
     <Compile Include="Caret.cs" />
     <Compile Include="Console.cs" />
+    <Compile Include="Console.Definitions.cs">
+      <DependentUpon>Console.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConsoleAction.cs" />
     <Compile Include="ConsoleClearFlags.cs" />
     <Compile Include="ConsoleProcessResult.cs" />
