--- a/Interpreters/Python/Paradox.Console.Interpreters.Python/Paradox.Console.Interpreters.Python.csproj
+++ b/Interpreters/Python/Paradox.Console.Interpreters.Python/Paradox.Console.Interpreters.Python.csproj
@@ -67,12 +67,14 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Autocompleter.cs" />
     <Compile Include="AutocompletionType.cs" />
     <Compile Include="MemberCollection.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PythonInterpreter.cs" />
     <Compile Include="OutputBufferWriter.cs" />
+    <Compile Include="TypeLoader.cs" />
     <Compile Include="Utilities\Check.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
